# rscode

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  fileOps.tsx  getFile.tsx  lang.tsx  types.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: TabBar.tsx
src/hooks/: useEditorTabs.tsx  useSaveShortcut.tsx
