[package]
name = "rscode"
version = "0.1.0"
description = "Lightweight VScode alternative on Tauri"
authors = ["SyntaxWave Studio"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rscode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

